--- a/css/styles-2.css
+++ b/css/styles-2.css
@@ -102,42 +102,31 @@ a {
 
 @media (max-width: 1050px) {
     
-    .nav-logo img {
-        height: 36px;
-        position: relative;
-        padding-left: 0;
-    }
-
     .navbar {
         justify-content: center;
         align-items: center;
         height: 55px;
     }
 
-    .navbar ul {
-        width: 50%;
+    .nav-logo img {
+        height: 36px;
+        z-index: 10;
+        position: relative;
+        padding-left: 0;
     }
 
     .nav-ul {
         position: absolute;
         right: 0;
         top: 55px;
-        height: 80vh;
         background-color: var(--color-white);
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: space-around;
-        width: 70%;
-        padding: 50px 16px;
+        width: 100%;
         transform: translateX(105%);
         transition: transform 0.5s ease-in;
         overflow-x: hidden;
-    }
-
-    .nav-ul li a {
-        padding: 12px 0;
-        margin: 0 16px;
     }
 
     .nav-btn {
