--- a/css/styles-2.css
+++ b/css/styles-2.css
@@ -157,3 +157,217 @@ a {
     }
 
 }
+
+/* ------------------ */
+
+/*---------- Hero ----------*/
+
+
+.container {
+    width: 100%;
+    display: flex;
+    background-color: var(--color-base);
+    padding: 1rem 0 1rem 0;
+}
+
+.container body {
+    max-width: 1200px;
+}
+
+.hero-description {
+    flex-basis: 50%; 
+    padding-left: 5vw;
+}
+
+.hero-description h1 {
+    font-size: 55px;
+    color: var(--color-white);
+    margin: 5rem 0 10px 0;
+}
+
+.hero-description h2 {
+    font-size: 23px;
+    color: var(--color-white);
+    font-family: 'Montserrat';
+    font-weight: 400;
+    line-height: 2;
+}
+
+.hero-img img {
+    width: 90%;
+    margin: 5rem 0 10px 0;
+}
+
+
+/* Animation */
+
+
+.container .hero-description h1, .hero-description h2, .hero-img img {
+    opacity: 0;
+    position: relative;
+    bottom: 1000px;
+    -webkit-animation: slide-bottom 2.5s cubic-bezier(0.87, 0, 0.13, 1) forwards;
+    animation: slide-bottom 2.5s forwards cubic-bezier(0.87, 0, 0.13, 1) forwards;
+}
+
+@keyframes slide-bottom {
+
+    100% { 
+        bottom: 0; 
+        opacity: 1; 
+    }
+}
+
+
+/*---------- About ----------*/
+ 
+
+.container-about {
+    display: flex;
+    padding: 60px 0px 0px 0px;
+    justify-content: space-around;
+    align-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 33%;
+    text-align: center;
+    float: left;
+}
+
+.container-about h3 {
+    font-family: 'Montserrat';
+    font-weight: 400;
+    margin: 10px 0 10px 0;
+}
+
+.container-about h2 {
+    font-family: 'Montserrat';
+    margin: 10px 0 10px 0;
+}
+
+.container-about .avatar img {
+    width: 80%;
+    max-width: 344px;
+    height: auto;
+    border-radius: 50%;
+}
+
+.container-about .network-icon {
+    list-style: none;
+    display: inline-block;
+    text-rendering: auto;
+    line-height: 1;
+    display: inline-flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 0;
+}
+
+.container-about .network-icon i {
+    margin-right: 5px;
+    padding: 3px;
+}
+
+.container-about .text-wrapper {
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+    width: 50%;
+}
+
+.container-video {
+    display: flex;
+    padding: 60px 20px;
+    text-align: center;
+    line-height: 2;
+}
+
+.video {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+ }
+
+ .video iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+ }
+
+
+/*---------- Media queries 1050px ----------*/
+
+
+@media (max-width: 1050px) {
+
+
+/* Hero */
+
+
+    .hero-description h1 {
+        font-size: 30px;
+    }
+
+    .hero-description h2 {
+        font-size: 18px;
+    }
+
+    .hero-img img {
+        width: 100%;
+        margin: 0 0 0 0;
+    }
+
+ /* About */
+ 
+ 
+    .container-about {
+        width: 100%;
+    }
+
+}
+
+
+/*---------- Media queries 480 ----------*/
+
+
+/* Hero */
+
+
+@media (max-width: 480px) {
+    
+    .container-hero .title h1 {
+        font-size: 16px;
+    }
+
+    .container-hero .subtitle h2 {
+        font-size: 13px;
+    }
+
+
+/* About */
+
+
+    .container-about {
+        width: 100%;
+    }
+
+}
+
+
+@media only screen and (max-width: 900px) {
+    
+    .container {
+        /* it place the items in vertical direction */
+      flex-direction: column;
+    }
+  
+    .box {
+      margin: 0 0 1rem;
+    }
+
+}
