--- a/css/styles-2.css
+++ b/css/styles-2.css
@@ -158,7 +158,9 @@ a {
 
 }
 
+
 /* ------------------ */
+
 
 /*---------- Hero ----------*/
 
@@ -276,14 +278,14 @@ a {
     line-height: 2;
 }
 
-.video {
+.video-link {
     position: relative;
     padding-bottom: 56.25%; /* 16:9 */
     padding-top: 25px;
     height: 0;
  }
 
- .video iframe {
+ .video-link iframe {
     position: absolute;
     top: 0;
     left: 0;
