--- a/css/styles-2.css
+++ b/css/styles-2.css
@@ -165,14 +165,14 @@ a {
 /*---------- Hero ----------*/
 
 
-.container {
+.container-hero {
     width: 100%;
     display: flex;
     background-color: var(--color-base);
     padding: 1rem 0 1rem 0;
 }
 
-.container body {
+.container-hero body {
     max-width: 1200px;
 }
 
@@ -204,7 +204,7 @@ a {
 /* Animation */
 
 
-.container .hero-description h1, .hero-description h2, .hero-img img {
+.container-hero .hero-description h1, .hero-description h2, .hero-img img {
     opacity: 0;
     position: relative;
     bottom: 1000px;
@@ -224,7 +224,7 @@ a {
 /*---------- About ----------*/
  
 
-.container-about {
+.container-avatar {
     display: flex;
     padding: 60px 0px 0px 0px;
     justify-content: space-around;
@@ -236,25 +236,25 @@ a {
     float: left;
 }
 
-.container-about h3 {
+.container-avatar h3 {
     font-family: 'Montserrat';
     font-weight: 400;
     margin: 10px 0 10px 0;
 }
 
-.container-about h2 {
+.container-avatar h2 {
     font-family: 'Montserrat';
     margin: 10px 0 10px 0;
 }
 
-.container-about .avatar-img img {
+.container-avatar .avatar-img img {
     width: 80%;
     max-width: 344px;
     height: auto;
     border-radius: 50%;
 }
 
-.container-about .network-icon {
+.container-avatar .network-icon {
     list-style: none;
     display: inline-block;
     text-rendering: auto;
@@ -266,7 +266,7 @@ a {
     padding: 0;
 }
 
-.container-about .network-icon i {
+.container-avatar .network-icon i {
     margin-right: 5px;
     padding: 3px;
 }
@@ -319,7 +319,7 @@ a {
  /* About */
  
  
-    .container-about {
+    .container-avatar {
         width: 100%;
     }
 
@@ -346,7 +346,7 @@ a {
 /* About */
 
 
-    .container-about {
+    .container-avatar {
         width: 100%;
     }
 
@@ -355,13 +355,9 @@ a {
 
 @media only screen and (max-width: 900px) {
     
-    .container {
+    .container-hero {
         /* it place the items in vertical direction */
       flex-direction: column;
-    }
-  
-    .box {
-      margin: 0 0 1rem;
     }
 
 }
